Cleanup, fix deprecations